<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    >

        <TextView
            android:id="@+id/textView2"
            style="@style/Widget.wordGame.TextView"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/score"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/TextInput_text"
            app:layout_constraintStart_toStartOf="@+id/TextInput_text"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout2" />

    <Button
        android:id="@+id/button"
        android:layout_width="69dp"
        android:layout_height="58dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/TextInput_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextInput_text"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text1"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S1"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/text2"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S2"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/text3"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S3"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/text4"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S4"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/text5"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S5"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/text6"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S6"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/text7"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S7"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/text8"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S8"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/text9"
            style="@style/Widget.wordGame.TextView"
            android:text="@string/S9"
            app:layout_column="2"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInput_text"
        android:layout_width="239dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/rounded_bg"
        android:hint="@string/input_text"
        android:textColorHint="?colorOnPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInput"
            style="@style/Widget.wordGame.TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/text_random"
        android:textColor="?colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="@+id/gridLayout2"
        app:layout_constraintStart_toStartOf="@+id/gridLayout2" />

    <TextView
        android:id="@+id/textOutPut"
        style="@style/Widget.wordGame.TextView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textAllCaps="false"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button" />

    <TextView
        android:id="@+id/count"
        style="@style/Widget.wordGame.TextView"
        android:layout_width="22dp"
        android:layout_height="25dp"
        android:text="@string/count"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/TextInput_text"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="71dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button_reset"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/rounded_bg" />

        <TextView
            android:id="@+id/amountOfWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:textColor="?colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
            app:layout_constraintEnd_toEndOf="@+id/gridLayout2"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>